--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <center>
         <h1>Reverse Spell Check</h1>
         <h2>Created by: Fox's Den <a href="http://youtube.com/@FoxsDen">YouTube</a> &nbsp;<a
-                href="http://github.com/FoxsDenYT">GitHub</a></h2>
+                                                                                             href="http://github.com/FoxsDenYT">GitHub</a> &nbsp;<a href="http://foxsdenyt.github.io/">Website</a></h2>
         <hr>
         <textarea name="Input" id="userin" cols="50" placeholder="Enter words to check"></textarea><br><br>
         <button id="checkit">
